- Add iOS 7 style receipt validation.
